@@ -135,6 +135,8 @@ CONFIG_SITE_OFFLINE_DESC=Site Offline Desc
 CONFIG_SITE_OFFLINE_LABEL=Site Offline
 CONFIG_TEMP_PATH_DESC=Temp Path Desc
 CONFIG_TEMP_PATH_LABEL=Temp Path
+CONFIG_UNICODESLUGS_LABEL=Unicode aliases
+CONFIG_UNICODESLUGS_DESC=Choose between transliteration and unicode aliases. Transliteration is default.
 CONFIG_WEB_SERVICES_DESC=Web Services Desc
 CONFIG_WEB_SERVICES_LABEL=Web Services
 CONFIG_COOKIE_DOMAIN_LABEL=Cookie Domain
