@@ -122,7 +122,7 @@ class JTableCategory extends JTableNested
 			$this->alias = strtolower($this->title);
 		}
 
-		$this->alias = JFilterOutput::stringURLSafe($this->alias);
+		$this->alias = JApplication::stringURLSafe($this->alias);
 		if (trim(str_replace('-','',$this->alias)) == '') {
 			$this->alias = JFactory::getDate()->toFormat('%Y-%m-%d-%H-%M-%S');
 		}
